@@ -1,3 +1,8 @@
+1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-mime.c (gnome_mime_type_or_default): If no extension is
+	found, only scan the regular expressions.
+
 Sat Feb 20 03:11:29 1999  Timur Bakeyev <mc@bat.ru>
 
 	* parse-path.cP (GNOME_CONFIG_PARSE_ERROR): Declared static, as other-
